<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sv5t"
            android:icon="@drawable/ic_bubble_chart_black_36dp"
            android:title="@string/sv5t" />
        <item
            android:id="@+id/nav_lhtt"
            android:icon="@drawable/ic_bubble_chart_black_36dp"
            android:title="@string/lhtt" />
        <item
            android:id="@+id/nav_nckh"
            android:icon="@drawable/ic_bubble_chart_black_36dp"
            android:title="@string/nckh" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_36dp"
            android:title="@string/trogiup"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
